fix style and nav menu

--- a/source/css/_partial/sidebar.styl
+++ b/source/css/_partial/sidebar.styl
@@ -35,6 +35,7 @@
       padding 10px 15px
       border 1px solid color-border
       width 100%
+      outline none
       box-sizing border-box
       color color-meta
       &:focus
