add scroll to top feature

--- a/layout/_partial/after_footer.ejs
+++ b/layout/_partial/after_footer.ejs
@@ -1,4 +1,3 @@
-<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 <script src="<%- config.root %>js/jquery.imagesloaded.min.js"></script>
 <script src="<%- config.root %>js/gallery.js"></script>
 
@@ -22,6 +21,29 @@ var disqus_shortname = '<%= config.disqus_shortname %>';
 <script type="text/javascript">
 (function($){
   $('.fancybox').fancybox();
+
+  function goTop() {
+      $(window).scroll(function(e) {
+          // If the distance between scrollbar and top border is more than 100 pix
+          if($(window).scrollTop() > 100)
+              $("#go-pg-top").fadeIn().css({ opacity: 0.6 });
+          else
+              $("#go-pg-top").fadeOut();
+      });
+  };
+
+  $("#go-pg-top").click(function(e) {
+          $('body,html').animate({scrollTop:0}, 200);
+  });
+  $("#go-pg-top").mouseover(function(e) {
+      $(this).css({ opacity: 1 });
+  });
+  $("#go-pg-top").mouseout(function(e) {
+      $(this).css({ opacity: 0.6 });
+  });
+  // Scroll to top
+  goTop();
+
 })(jQuery);
 </script>
 <% } %>
