Change code highlight color scheme from default to vs

--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -161,7 +161,7 @@ article
       border-radius 3px
 
     pre
-      background #eee
+      background #FFF
       border 1px solid color-border
       margin-top 15px
       overflow auto
