--- a/source/css/_base/utils.styl
+++ b/source/css/_base/utils.styl
@@ -19,3 +19,24 @@
     padding 20px
     font-size 20px
     cursor pointer
+
+.copyright
+    display block
+    padding 10px 20px
+    margin 35px 0 25px
+    line-height 24px
+    font-size 13px
+    background-color #FFFCEF
+    .claim
+        font-size 15px
+        font-weight 600
+        clearfix()
+
+.copyright
+    em 
+        font-style normal
+        color gray
+    a
+        &:hover
+            color #C40000
+            text-decoration none
