show recent posts

--- a/source/css/_partial/sidebar.styl
+++ b/source/css/_partial/sidebar.styl
@@ -19,6 +19,16 @@
       font-size 0.9em
       padding 15px 20px
 
+      li
+        text-overflow ellipsis
+        white-space nowrap
+        overflow hidden
+
+        a
+          &:hover
+            text-decoration none
+            color #C40000
+
     ul, ol, dl
       list-style none
       ul, ol, dl
