add prev and next post nav

--- a/layout/_partial/article.ejs
+++ b/layout/_partial/article.ejs
@@ -30,6 +30,19 @@
         </div>
         <% } %>
       <% } else { %>
+
+        <% if (page.prev){ %>
+          <div class="alignleft post-nav">
+            <em>上一篇: </em><a href="<%- config.root %><%- page.prev.path %>"><%- page.prev.title %></a>
+          </div>
+        <% } %>
+        <% if (page.next){ %>
+          <div class="alignright post-nav">
+            <em>下一篇: </em><a href="<%- config.root %><%- page.next.path %>"><%- page.next.title %></a>
+          </div>
+          <div class="clearfix"></div>
+        <% } %>
+
         <% if (theme.copyright){ %>
           <div class="copyright">
             <% if (theme.copyright.claim){ %>
