--- a/source/css/_base/utils.styl
+++ b/source/css/_base/utils.styl
@@ -32,7 +32,7 @@
         font-weight 600
         clearfix()
 
-.copyright
+.copyright, .post-nav
     em 
         font-style normal
         color gray
@@ -40,3 +40,12 @@
         &:hover
             color #C40000
             text-decoration none
+
+.post-nav
+    em
+        color #258FB8
+        font-weight 700
+        font-size 15px
+    a
+        color #258FB8
+
