--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -243,6 +243,7 @@ article
     line-height 16px
     position relative
     min-height 16px
+    clear both
     a
       color color-meta
       &:hover
