fix search box style and add paging controls

--- a/layout/_partial/after_footer.ejs
+++ b/layout/_partial/after_footer.ejs
@@ -44,6 +44,52 @@ var disqus_shortname = '<%= config.disqus_shortname %>';
   // Scroll to top
   goTop();
 
+  $('#sidebar i.icon-search').on({
+    'click': function(){
+      $('#sidebar form')[0].submit();
+    },
+    'mouseover': function(){
+      $(this).addClass('search-hover');
+    },
+    'mouseout':function(){
+      $(this).removeClass('search-hover');
+    }
+  });
+
+  var $prev = $('#pagination .prev'),
+      $next = $('#pagination .next'),
+      $pgPrev = $('#page-direction .page-prev'),
+      $pgNext = $('#page-direction .page-next');
+  if($prev.length){
+    $pgPrev.show().attr('href', $prev.attr('href'));
+    $prev.hide();
+  }else{
+    $pgPrev.hide();
+  }
+  if($next.length){
+    $pgNext.show().attr('href', $next.attr('href'));
+    $next.hide();
+  }else{
+    $pgNext.hide();
+  }
+  $pgPrev.on({
+    'mouseover': function(){
+      $(this).addClass('page-prev-hover');
+    },
+    'mouseout': function(){
+      $(this).removeClass('page-prev-hover');
+    }
+  });
+
+  $pgNext.on({
+    'mouseover': function(){
+      $(this).addClass('page-next-hover');
+    },
+    'mouseout': function(){
+      $(this).removeClass('page-next-hover');
+    }
+  });
+
 })(jQuery);
 </script>
 <% } %>
