--- a/source/css/_base/utils.styl
+++ b/source/css/_base/utils.styl
@@ -1,3 +1,6 @@
+.HIDE
+    display none
+
 .imgbox
   margin-bottom 5px
   margin-left 5px
@@ -51,5 +54,38 @@
 
 .ps
     color #BBB
+
+.page-direction
+    list-style none
+    .page-prev
+        left 5px
+        font-size 30px
+    .page-next
+        right 5px
+        font-size 30px
+    .page-prev-hover
+        font-size 35px
+    .page-next-hover
+        font-size 35px
+    a
+        font-size 45px
+        color #B9B9B9
+        position fixed
+        top 47%
+        &:hover
+            color #C40000
+            opacity 0.7
+            text-decoration none
+
+.page-list
+    text-align center
+    .page-number
+    .extend
+        margin 0 7px 0 0
+        padding 5px 10px
+        background-color #D1D1D1
+    .current
+        color #333
+        font-weight 700
 
 
