--- a/layout/_widget/search.ejs
+++ b/layout/_widget/search.ejs
@@ -1,6 +1,7 @@
 <div class="search">
   <form action="//google.com/search" method="get" accept-charset="utf-8">
-    <input type="search" name="q" results="0" placeholder="<%= __('search') %>">
+    <input type="text" name="q" results="0" placeholder="<%= __('search') %>">
+    <i class="icon-search"></i>
     <input type="hidden" name="q" value="site:<%- config.url.replace(/^https?:\/\//, '') %>">
   </form>
 </div>
