--- a/layout/_partial/pagination.ejs
+++ b/layout/_partial/pagination.ejs
@@ -2,7 +2,9 @@
     <li><a class="page-prev icon-chevron-sign-left" href="javascript:;" title="<%= __('prev') %>"></a></li>
     <li><a class="page-next icon-chevron-sign-right" href="javascript:;" title="<%= __('next') %>"></a></li>
 </ul>
-<nav id="page-list" class="page-list"><%- paginator() %></nav>
+<% if (page.prev||page.next){ %>
+    <nav id="page-list" class="page-list"><%- paginator() %></nav>
+<% } %>
 <nav id="pagination">
   <% if (page.prev){ %>
     <a href="<%- config.root %><%- page.prev_link %>" class="alignleft prev"><%= __('prev') %></a>
