fix code block style

--- a/source/css/_partial/syntax.styl
+++ b/source/css/_partial/syntax.styl
@@ -60,12 +60,14 @@ figure.highlight
   table
     margin-top 0
     border-spacing 0
+    border-left 3px solid rgb(255, 89, 242)
 
   .gutter
     color color-meta
     padding-right 15px
     border-right 1px solid color-border
     text-align right
+    padding-left 5px
 
   .code
     padding-left 15px
