--- a/source/css/_base/variable.styl
+++ b/source/css/_base/variable.styl
@@ -6,7 +6,7 @@ color-border = #ddd
 color-link = #258fb8
 
 // Font
-font-default = "Helvetica Neue", "Helvetica", Arial, sans-serif
+font-default = "Tahoma", "Microsoft YaHei", Arial, sans-serif
 font-serif = "Georgia", serif
 font-mono = Monaco, Menlo, Consolas, Courier New, monospace
 font-title = "Lato", Helvetica Neue, Helvetica, Arial, sans-serif
