Fix theme color style

--- a/source/css/_base/variable.styl
+++ b/source/css/_base/variable.styl
@@ -1,12 +1,12 @@
 // Color
-color-background = #eee
-color-font = #444
+color-background = #FFF
+color-font = #3A4145
 color-meta = #999
 color-border = #ddd
-color-link = #258fb8
+color-link = #3AB5E4
 
 // Font
-font-default = "Tahoma", "Microsoft YaHei", Arial, sans-serif
+font-default = 'Droid Serif', serif, "Tahoma", "Microsoft YaHei", Arial, sans-serif
 font-serif = "Georgia", serif
 font-mono = Monaco, Menlo, Consolas, Courier New, monospace
 font-title = "Lato", Helvetica Neue, Helvetica, Arial, sans-serif
