--- a/source/css/_base/utils.styl
+++ b/source/css/_base/utils.styl
@@ -36,7 +36,7 @@
         clearfix()
 
 .copyright, .post-nav
-    em 
+    em
         font-style normal
         color gray
     a
@@ -83,7 +83,7 @@
     .extend
         margin 0 7px 0 0
         padding 5px 10px
-        background-color #D1D1D1
+        background-color #FFF
     .current
         color #333
         font-weight 700
