--- a/source/css/_base/variable.styl
+++ b/source/css/_base/variable.styl
@@ -3,7 +3,7 @@ color-background = #FFF
 color-font = #3A4145
 color-meta = #999
 color-border = #ddd
-color-link = #0E83CD
+color-link = #2180DA
 
 // Font
 font-default = 'Droid Serif', serif, "Tahoma", "Microsoft YaHei", Arial, sans-serif
