--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -42,6 +42,6 @@
   <link rel="stylesheet" href="<%- config.root %>css/style.css" media="screen" type="text/css">
   <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
   <!--[if lt IE 9]><script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script src="<%- config.root %>js/jquery.min.js"></script>
   <%- partial('google_analytics') %>
 </head>
