Add weibo and linkedin share button support

--- a/layout/_partial/post/share.ejs
+++ b/layout/_partial/post/share.ejs
@@ -6,6 +6,12 @@
     <% if (theme.addthis.twitter){ %>
       <a class="addthis_button_tweet"></a>
     <% } %>
+    <% if (theme.addthis.weibo){ %>
+      <a class="addthis_button_sinaweibo_like"></a>
+    <% } %>
+    <% if (theme.addthis.linkedin){ %>
+      <a class="addthis_button_linkedin"></a>
+    <% } %>
     <% if (theme.addthis.google){ %>
       <a class="addthis_button_google_plusone" g:plusone:size="medium"></a>
     <% } %>
