Fix go to page top icon

--- a/source/css/_base/utils.styl
+++ b/source/css/_base/utils.styl
@@ -7,7 +7,8 @@
   border 1px solid gray
 
 #go-pg-top
-    background #D3D3D3
+    background #777
+    color #FFF
     text-align center
     border 1px solid #eee
     display none
@@ -15,7 +16,7 @@
     width 24px
     padding-top 4px
     overflow hidden
-    border-radius 6px
+    border-radius 50px
     position fixed
     bottom 80px
     right 11.52991452991453%
