--- a/source/css/_base/utils.styl
+++ b/source/css/_base/utils.styl
@@ -58,21 +58,28 @@
 
 .page-direction
     list-style none
+    .page-prev,.page-next
+        position fixed
+        top 47%
+        width 30px
+        height 30px
+        border-radius 30px
+        background-color #777
+        color #FFF
+        font-size 30px
     .page-prev
         left 5px
-        font-size 30px
+        i
+            margin-left 9px
     .page-next
         right 5px
-        font-size 30px
+        i
+            margin-left 11px
     .page-prev-hover
         font-size 35px
     .page-next-hover
         font-size 35px
     a
-        font-size 45px
-        color #B9B9B9
-        position fixed
-        top 47%
         &:hover
             color #C40000
             opacity 0.7
