--- a/source/css/_base/utils.styl
+++ b/source/css/_base/utils.styl
@@ -61,29 +61,28 @@
     .page-prev,.page-next
         position fixed
         top 47%
-        width 30px
-        height 30px
-        border-radius 30px
-        background-color #777
-        color #FFF
-        font-size 30px
+        font-size 20px
+        .icon-stack
+            color #FFF
+            opacity 0.7
+        .icon-stack-base
+            color #777
     .page-prev
         left 5px
         i
             margin-left 9px
     .page-next
-        right 5px
+        right 20px
         i
             margin-left 11px
     .page-prev-hover
-        font-size 35px
     .page-next-hover
-        font-size 35px
     a
         &:hover
-            color #C40000
-            opacity 0.7
-            text-decoration none
+            .icon-stack
+                color #C40000
+                opacity 0.9
+                text-decoration none
 
 .page-list
     text-align center
